# giraffe-agent

./: .env.example  .gitattributes  .gitignore  BM_DB_INTEGRATION_RELEASE_REPORT.md  BM_DB_INTEGRATION_V1_1_HARDENING_REPORT.md  BM_DB_INTEGRATION_V1_2_REPLAY_DECISION_PACKET_REPORT.md  BM_DB_INTEGRATION_V1_3_TRUST_BOUNDARY_REPORT.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.json  CONTRIBUTING.md  MAIN_BRANCH_VALIDATION_REPORT.md  NOTICE.md  PATENT_LICENSE.md  PR11_TEST_AND_INTERFACE_AUDIT_REPORT.md  PR12_QWEN_QC_IMPLEMENTATION_REPORT.md  README.md  SECURITY.md  TEST_REPORT_AIVAN_CI_FIX.md  TEST_REPORT_AIVAN_FULL.md  TEST_REPORT_AIVAN_GLTG_INTEGRATION.md  TEST_REPORT_AIVAN_RETEST.md  TEST_RESULT.md  TEST_RESULTS_OPENCLAW_5X.md  WECHAT_1633_FAILURE_ROOT_CAUSE_REPORT.md  bm_db_adapter.py  bm_db_hardening.py  bm_db_v12_replay_test.py  bm_db_v13_trust_test.py  build_schema.py  decision_packet_generator.py  evidence_guard.py  execution_graph_replay.py  human_confirmation.py  main.py  pydantic_stub.py  pyproject.toml  rule_packet_registry.py  run_bm_e2e_with_db.py  sample_decision_packet.json  sample_decision_packet.md  (+7 more)
GLTG/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
GLTG/docs/: acceptance_criteria.md  api_reference.md  apparel_node_templates.md  evidence_weighting.md  glossary.md  integration_guide.md  model_spec.md  path_enumeration.md  reforecasting.md
GLTG/examples/: 10000_shirts_order.json  10000_shirts_participants.json  10000_shirts_progress_events.json  10000_shirts_supplier_memory.json  README.md  one_supplier.json  two_suppliers.json  (+1 more)
(+607 files in other folders)
