[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gltg"
version = "1.0.0"
description = "Giraffe Lead-Time Graph — evidence-weighted execution-time graph model for apparel and textile orders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
cli = []

[project.scripts]
gltg = "gltg.integrations.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gltg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
